--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "handsontable": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
